--- a/index.html
+++ b/index.html
@@ -13,19 +13,24 @@
 <body>
   <div id="app">
     <div class="nav-bar"></div>
-  
-    <div class="cart">Cart({{ cart }})</div>
-    <product-display :premium="premium"></product-display>
-  
-    
+
+    <div class="cart">Cart({{ cart.length }})</div>
+    <product-display :premium="premium" @add-to-cart="updateCart" @remove-from-cart="removeById">
+    </product-display>
+
+
   </div>
 
 
   <!-- Import App -->
   <script src="./main.js"></script>
 
-    <!-- Import App -->
-    <script src="./components/ProductDisplay.js"></script>
+  <!-- Import Components -->
+  <script src="./components/ProductDisplay.js"></script>
+
+  <script src="./components/ProductDetails.js"></script>
+  <script src="./components/ReviewForm.js"></script>
+    <script src="./components/ReviewList.js"></script>
 
 
   <!-- Mount App -->
